--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,9 @@ a {
 .emphasized {
   font-style: italic;
 }
+
+.grid {
+  display: grid;
+  gap: 5rem;
+  grid-template-columns: 1fr 3fr;
+}
