--- a/src/views/podcastDetail/podcastDetail.css
+++ b/src/views/podcastDetail/podcastDetail.css
@@ -1,7 +1,4 @@
 .podcast-detail {
-  display: grid;
-  gap: 8rem;
-  grid-template-columns: 1fr 3fr;
   margin-top: 32px;
 }
 
